Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-17907

Encrypted flag should not remove other flags

XMLWordPrintable

    • 3
    • 9223372036854775807

      Setting a directory as encrypted apparently removes the other flags already set, such as project ID.

      [root@es1 lustre]# lfs project -srp 102 test_fscrypt1/
      [root@es1 lustre]# lfs project -d test_fscrypt1/
        102 P test_fscrypt1/
      
      root@ubuntu2204:~# fscrypt setup /lustre
      Allow users other than root to create fscrypt metadata on this filesystem? (See
      https://github.com/google/fscrypt#setting-up-fscrypt-on-a-filesystem) [y/N] y
      Metadata directories created at "/lustre/.fscrypt", writable by everyone.
      
      root@ubuntu2204:/lustre# fscrypt encrypt /lustre/test_fscrypt1
      The following protector sources are available:
      1 - Your login passphrase (pam_passphrase)
      2 - A custom passphrase (custom_passphrase)
      3 - A raw 256-bit key (raw_key)
      Enter the source number for the new protector [2 - custom_passphrase]: 2
      Enter a name for the new protector: pass
      Enter custom passphrase for protector "pass":
      Confirm passphrase:
      "/lustre/test_fscrypt1" is now encrypted, unlocked, and ready for use.
      
      root@ubuntu2204:/lustre# cd test_fscrypt1
      root@ubuntu2204:/lustre/test_fscrypt1# touch aaa
      root@ubuntu2204:/lustre/test_fscrypt1# lfs project aaa
          0 - aaa
      root@ubuntu2204:/lustre/test_fscrypt1# lfs project -d ../test_fscrypt1/
        102 - ../test_fscrypt1/
      

            sebastien Sebastien Buisson
            sebastien Sebastien Buisson
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: